# TURtLES

./: MANIFEST.in  README.md  setup.cfg  setup.py
TURtLES/: Markhvida_Table_1.csv  Markhvida_variogram.json  base.py  constants.py  main.py
TURtLES/example/: SF_Downtown_Sites.csv  Selecting a Rupture Scenario.ipynb  Simulate Ground Motion Maps for a Rupture Scenario.ipynb
example/: Selecting Indices for an Earthquake Scenario.ipynb  Selecting a Rupture Scenario.ipynb  Simulate Ground Motion Maps for a Rupture Scenario.ipynb  Simulate Ground Motion Maps for an Earthquake Scenario.ipynb
seaturtles/: __init__.py  base.py  main.py
