[metadata]
name = TURtLES
version = 1.0
author = Anne Hulsey
author_email = anne.hulsey@auckland.ac.nz
description = The Uncertainty in Regional-Level Earthquake Scenario simulation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/annehulsey/TURtLES
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = TURtLES
packages = find:
python_requires = >=3.7

[options.packages.find]
where = TURtLES